tests/golden/errors/int_float_too_large.py
print(float(10**309))
